--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-project/build/target/
+!.gitignore
+
+*.class
+*.log
+
+# Build directories #
+bin/
+boot/
+build/
+dist/
+lib_managed/
+project/target/
+project/project/target/
+project-*/
+src_managed/
 target/
+
+# Package files #
+*.jar
+*.war
+*.ear
+
+# Hidden and service files #
+*~
+.*
+_*
